frontend-bluegreen.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: oracle-smart-frontend
  template:
    metadata:
      labels:
        app: oracle-smart-frontend
    spec:
      imagePullSecrets:
        - name: ocir-secret
      containers:
        - name: frontend
          image: qro.ocir.io/axozuy0c3gbd/oracle-smart-frontend:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
          livenessProbe:
            httpGet:
              path: /healthz
              port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: oracle-smart-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
