green-compat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: green
spec:
  selector:
    app: oracle-smart-frontend
    version: green
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
