green-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-green
  namespace: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: oracle-smart-frontend
      version: green
  template:
    metadata:
      labels:
        app: oracle-smart-frontend
        version: green
    spec:
      containers:
        - name: frontend
          image: qro.ocir.io/axozuy0c3gbd/oracle-smart-frontend:v1
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
          livenessProbe:
            httpGet:
              path: /healthz
              port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-green-service
  namespace: green
spec:
  selector:
    app: oracle-smart-frontend
    version: green
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
